# grapple-desktop

./: .codex  AGENTS.md  CMakeLists.txt  HANDOFF.md  README.md
apps/demo_project/: CMakeLists.txt  DemoProject.cpp  DemoProject.hpp
apps/grapple_cli/: CMakeLists.txt  main.cpp
apps/grapple_desktop/: CMakeLists.txt  EffectParamPanel.cpp  EffectParamPanel.hpp  StewardPanel.cpp  StewardPanel.hpp  main.cpp
apps/grapple_desktop/src/: DesktopApp.cpp  DesktopApp.hpp  DesktopWindow.cpp  DesktopWindow.hpp  main.cpp
libs/agent/: CMakeLists.txt
libs/agent/include/grapple/agent/: AgentBridge.hpp  AgentConversationState.hpp  AgentDiagnostic.hpp  AgentRun.hpp  AgentRunEvent.hpp  AgentRunEventLog.hpp  AgentRunEventSerializer.hpp  AgentRunSerializer.hpp  AgentTool.hpp  AgentToolContext.hpp  AgentToolRegistry.hpp  ProjectTools.hpp
libs/agent/src/: AgentBridge.cpp  AgentConversationState.cpp  AgentRunEvent.cpp  AgentRunEventLog.cpp  AgentRunEventSerializer.cpp  AgentRunSerializer.cpp  AgentToolRegistry.cpp  ProjectTools.cpp
libs/app/: CMakeLists.txt
libs/app/include/grapple/app/: AppViewModel.hpp  MediaSourceMapping.hpp  NativeEffectSession.hpp  NativeExportSession.hpp  NativeMediaFrameSource.hpp  NativeMediaImport.hpp  NativePreviewSession.hpp  NativeProjectCommandWriter.hpp  NativeProjectSession.hpp  NativeStewardPlanner.hpp  NativeStewardSession.hpp  NativeWorkspaceSession.hpp
libs/app/src/: AppViewModel.cpp  NativeEffectSession.cpp  NativeExportSession.cpp  NativeMediaFrameSource.cpp  NativeMediaImport.cpp  NativePreviewSession.cpp  NativeProjectCommandWriter.cpp  NativeProjectSession.cpp  NativeStewardPlanner.cpp  NativeStewardSession.cpp  NativeWorkspaceSession.cpp
libs/graph/: CMakeLists.txt
libs/graph/include/grapple/graph/: GraphDiff.hpp  GraphDocument.hpp  GraphEdge.hpp  GraphNode.hpp  GraphSerializer.hpp
libs/graph/src/: GraphDiff.cpp  GraphDocument.cpp  GraphSerializer.cpp
libs/history/: CMakeLists.txt
libs/history/include/grapple/history/: CommandLogStore.hpp  CommandRecord.hpp  EventLogStore.hpp  EventRecord.hpp  HistoryHead.hpp  HistorySerializer.hpp  SnapshotRecord.hpp  SnapshotStore.hpp
libs/history/src/: CommandLogStore.cpp  EventLogStore.cpp  HistorySerializer.cpp  SnapshotStore.cpp
libs/jobs/: CMakeLists.txt
libs/jobs/include/grapple/jobs/: CancellationToken.hpp  Job.hpp  JobQueue.hpp  JobScheduler.hpp  MainThreadDispatcher.hpp  ProgressSink.hpp  ProjectCommandQueue.hpp
libs/jobs/src/: CancellationToken.cpp  JobQueue.cpp  JobScheduler.cpp  MainThreadDispatcher.cpp  ProjectCommandQueue.cpp
libs/media/: CMakeLists.txt
libs/media/include/grapple/media/: AudioBuffer.hpp  CachingMediaReader.hpp  FrameCache.hpp  LocalMediaReader.hpp  MediaFrame.hpp  MediaQuality.hpp  MediaReader.hpp  MediaSource.hpp  OpenCVMediaReader.hpp  VideoDecoder.hpp
libs/media/src/: CachingMediaReader.cpp  FrameCache.cpp  LocalMediaReader.cpp  MediaSource.cpp  OpenCVMediaReader.cpp  VideoDecoder.cpp
libs/project/: CMakeLists.txt
libs/project/include/grapple/project/: ProjectCommand.hpp  ProjectCommandNames.hpp  ProjectCommandResult.hpp  ProjectCommandService.hpp  ProjectController.hpp  ProjectDocument.hpp  ProjectEventNames.hpp  ProjectEvents.hpp  ProjectIdAllocator.hpp  ProjectInfo.hpp  (+5 more)
libs/project/src/: ProjectCommand.cpp  ProjectCommandNames.cpp  ProjectController.cpp  ProjectDeserializer.cpp  ProjectEventNames.cpp  ProjectEvents.cpp  ProjectInvariants.hpp  ProjectMediaPlacement.cpp  ProjectQuery.cpp  ProjectSerializer.cpp  ProjectSnapshot.cpp
libs/project/src/internal/: ProjectInvariants.hpp
libs/projection/: CMakeLists.txt
libs/projection/src/: ProjectionQueryService.cpp  RenderPlanBuilder.cpp  RenderPlanHashes.cpp  RenderPlanSerializer.cpp  TimelineProjector.cpp
libs/render/: CMakeLists.txt
libs/render/src/: ExportSession.cpp  FinalRenderShell.cpp  LocalRenderCore.cpp  LocalRenderSystem.cpp  PreviewRenderShell.cpp  PreviewSession.cpp
libs/runtime/: CMakeLists.txt
libs/runtime/src/: BuiltinEffectRuntime.cpp  MemoryRuntimeCache.cpp  RuntimeCache.cpp  RuntimeDependencyPlanner.cpp  RuntimeEvaluator.cpp  RuntimeParamEvaluator.cpp
libs/storage/: CMakeLists.txt
libs/storage/src/: ProjectCommitBuilder.cpp  ProjectPackageManifest.cpp  ProjectPackageReader.cpp  ProjectPackageSession.cpp  ProjectPackageStore.cpp  ProjectPackageWriter.cpp  SchemaMigration.cpp
libs/timeline/: CMakeLists.txt
libs/timeline/src/: ParamSampling.cpp  ParamValue.cpp  TimelineSerializer.cpp
libs/ui_qt/: CMakeLists.txt
libs/ui_qt/src/: AssetThumbnailCache.cpp  CameraPropertyPanel.cpp  ClipPropertyPanel.cpp  ClipTransformPanel.cpp  CompositionViewport.cpp  EffectParamPanel.cpp  ExportSettingsPanel.cpp  PreviewSurface.cpp  RenderFrameText.cpp  StewardPanel.cpp  TextClipPropertyPanel.cpp  TimelinePanel.cpp
tests/: CMakeLists.txt  TestAssert.hpp
tests/integration/: CMakeLists.txt  NativeFlowTest.cpp
tests/unit/agent/: AgentBridgeTest.cpp  AgentConversationStateTest.cpp  AgentRunEventSerializerTest.cpp  AgentToolRegistryTest.cpp  CMakeLists.txt
tests/unit/app/: CMakeLists.txt  NativeProjectSessionTest.cpp
tests/unit/asset/: AssetCatalogTest.cpp  CMakeLists.txt
tests/unit/foundation/: CMakeLists.txt  FoundationTest.cpp
tests/unit/graph/: CMakeLists.txt  GraphDocumentTest.cpp
tests/unit/history/: CMakeLists.txt  HistoryStoreTest.cpp
tests/unit/jobs/: CMakeLists.txt  JobsTest.cpp
tests/unit/media/: CMakeLists.txt  CachingMediaReaderTest.cpp  FrameCacheTest.cpp  LocalMediaReaderTest.cpp  OpenCVMediaReaderTest.cpp
tests/unit/model/: CMakeLists.txt  ModelRegistryTest.cpp
tests/unit/project/: CMakeLists.txt  ProjectControllerTest.cpp
tests/unit/projection/: CMakeLists.txt  ProjectionTest.cpp
tests/unit/render/: CMakeLists.txt  ExportSessionTest.cpp  LocalRenderSystemTest.cpp  PreviewSessionTest.cpp  RenderShellTest.cpp
tests/unit/runtime/: CMakeLists.txt  RuntimeTest.cpp
tests/unit/storage/: CMakeLists.txt  ProjectPackageStoreTest.cpp
tests/unit/timeline/: CMakeLists.txt  TimelinePayloadTest.cpp
tests/unit/ui_qt/: CMakeLists.txt  StewardPanelTest.cpp
(+100 files in other folders)
