cmake_minimum_required(VERSION 3.22)

project(GrappleNative VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

enable_testing()

add_subdirectory(libs/foundation)
add_subdirectory(libs/effects)
add_subdirectory(libs/asset)
add_subdirectory(libs/timeline)
add_subdirectory(libs/graph)
add_subdirectory(libs/project)
add_subdirectory(libs/projection)
add_subdirectory(libs/history)
add_subdirectory(libs/storage)
add_subdirectory(libs/jobs)
add_subdirectory(libs/media)
add_subdirectory(libs/runtime)
add_subdirectory(libs/model)
add_subdirectory(libs/render)
add_subdirectory(libs/agent)
add_subdirectory(libs/app)
add_subdirectory(libs/ui_qt)
add_subdirectory(apps/demo_project)
add_subdirectory(apps/grapple_cli)
add_subdirectory(apps/grapple_desktop)
add_subdirectory(tests)
add_subdirectory(tests/integration)
