add_subdirectory(unit/foundation)
add_subdirectory(unit/asset)
add_subdirectory(unit/timeline)
add_subdirectory(unit/graph)
add_subdirectory(unit/project)
add_subdirectory(unit/projection)
add_subdirectory(unit/history)
add_subdirectory(unit/storage)
add_subdirectory(unit/jobs)
add_subdirectory(unit/media)
add_subdirectory(unit/runtime)
add_subdirectory(unit/model)
add_subdirectory(unit/render)
add_subdirectory(unit/agent)
add_subdirectory(unit/app)

add_test(
  NAME architecture_guards
  COMMAND bash ${CMAKE_SOURCE_DIR}/scripts/check_architecture.sh
)

add_test(NAME grapple_cli_smoke COMMAND grapple_cli)
add_test(NAME grapple_cli_render_plan_json COMMAND grapple_cli --render-plan-json)
add_test(NAME grapple_cli_preview_frame COMMAND grapple_cli --preview-frame)
set_tests_properties(grapple_cli_preview_frame PROPERTIES PASS_REGULAR_EXPRESSION "audioClips=0")
add_test(NAME grapple_cli_export_smoke COMMAND grapple_cli --export-smoke)
add_test(NAME grapple_cli_save_package COMMAND grapple_cli --save-package)
add_test(NAME grapple_cli_open_package_smoke COMMAND grapple_cli --open-package-smoke)
add_test(NAME grapple_desktop_smoke COMMAND grapple_desktop --smoke)
set_tests_properties(grapple_desktop_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_mutate_smoke COMMAND grapple_desktop --mutate-smoke)
set_tests_properties(grapple_desktop_mutate_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_seek_smoke COMMAND grapple_desktop --seek-smoke)
set_tests_properties(grapple_desktop_seek_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_timeline_seek_smoke COMMAND grapple_desktop --timeline-seek-smoke)
set_tests_properties(grapple_desktop_timeline_seek_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_select_smoke COMMAND grapple_desktop --select-smoke)
set_tests_properties(grapple_desktop_select_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_select_camera_smoke COMMAND grapple_desktop --select-camera-smoke)
set_tests_properties(grapple_desktop_select_camera_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_select_second_camera_smoke COMMAND grapple_desktop --select-second-camera-smoke)
set_tests_properties(grapple_desktop_select_second_camera_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_smoke COMMAND grapple_desktop --steward-smoke)
set_tests_properties(grapple_desktop_steward_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_import_smoke COMMAND grapple_desktop --import-smoke)
set_tests_properties(grapple_desktop_import_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_import_media_types_smoke COMMAND grapple_desktop --import-media-types-smoke)
set_tests_properties(grapple_desktop_import_media_types_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_add_video_smoke COMMAND grapple_desktop --add-video-smoke)
set_tests_properties(grapple_desktop_add_video_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_empty_add_video_smoke COMMAND grapple_desktop --empty-add-video-smoke)
set_tests_properties(grapple_desktop_empty_add_video_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_empty_add_track_smoke COMMAND grapple_desktop --empty-add-track-smoke)
set_tests_properties(grapple_desktop_empty_add_track_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_empty_add_camera_smoke COMMAND grapple_desktop --empty-add-camera-smoke)
set_tests_properties(grapple_desktop_empty_add_camera_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_move_clip_smoke COMMAND grapple_desktop --move-clip-smoke)
set_tests_properties(grapple_desktop_move_clip_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_undo_redo_smoke COMMAND grapple_desktop --undo-redo-smoke)
set_tests_properties(grapple_desktop_undo_redo_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_add_effect_smoke COMMAND grapple_desktop --add-effect-smoke)
set_tests_properties(grapple_desktop_add_effect_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_set_effect_param_smoke COMMAND grapple_desktop --set-effect-param-smoke)
set_tests_properties(grapple_desktop_set_effect_param_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_delete_effect_smoke COMMAND grapple_desktop --delete-effect-smoke)
set_tests_properties(grapple_desktop_delete_effect_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_delete_smoke COMMAND grapple_desktop --delete-smoke)
set_tests_properties(grapple_desktop_delete_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_delete_track_smoke COMMAND grapple_desktop --delete-track-smoke)
set_tests_properties(grapple_desktop_delete_track_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_playback_smoke COMMAND grapple_desktop --playback-smoke)
set_tests_properties(grapple_desktop_playback_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_open_package_smoke COMMAND grapple_desktop --open-package-smoke)
set_tests_properties(grapple_desktop_open_package_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_edit_save_smoke COMMAND grapple_desktop --edit-save-smoke)
set_tests_properties(grapple_desktop_edit_save_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_screenshot COMMAND grapple_desktop --screenshot /tmp/grapple-desktop-ctest.png)
set_tests_properties(grapple_desktop_screenshot PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_effect_screenshot COMMAND grapple_desktop --effect-screenshot /tmp/grapple-desktop-effect-ctest.png)
set_tests_properties(grapple_desktop_effect_screenshot PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
