add_subdirectory(unit/foundation)
add_subdirectory(unit/asset)
add_subdirectory(unit/timeline)
add_subdirectory(unit/graph)
add_subdirectory(unit/project)
add_subdirectory(unit/projection)
add_subdirectory(unit/history)
add_subdirectory(unit/storage)
add_subdirectory(unit/jobs)
add_subdirectory(unit/media)
add_subdirectory(unit/runtime)
add_subdirectory(unit/model)
add_subdirectory(unit/render)
add_subdirectory(unit/agent)
add_subdirectory(unit/app)
add_subdirectory(unit/ui_qt)

add_test(
  NAME architecture_guards
  COMMAND bash ${CMAKE_SOURCE_DIR}/scripts/check_architecture.sh
)

add_test(NAME grapple_cli_smoke COMMAND grapple_cli)
add_test(NAME grapple_cli_version COMMAND grapple_cli --version)
set_tests_properties(grapple_cli_version PROPERTIES PASS_REGULAR_EXPRESSION "Grapple 0\\.1\\.0")
add_test(NAME grapple_cli_help COMMAND grapple_cli --help)
set_tests_properties(grapple_cli_help PROPERTIES PASS_REGULAR_EXPRESSION "Usage:")
add_test(NAME grapple_cli_render_plan_json COMMAND grapple_cli --render-plan-json)
add_test(NAME grapple_cli_preview_frame COMMAND grapple_cli --preview-frame)
set_tests_properties(grapple_cli_preview_frame PROPERTIES PASS_REGULAR_EXPRESSION "audioClips=0")
add_test(NAME grapple_cli_export_smoke COMMAND grapple_cli --export-smoke)
add_test(
  NAME grapple_cli_import_media_export
  COMMAND bash -c "rm -f /tmp/grapple-cli-import-media-export.mp4 && \"$1\" --export-smoke >/dev/null && \"$1\" --import-media /tmp/grapple-native-demo/starter-gradient.avi --export /tmp/grapple-cli-import-media-export.mp4" bash $<TARGET_FILE:grapple_cli>
)
set_tests_properties(grapple_cli_import_media_export PROPERTIES PASS_REGULAR_EXPRESSION "output=/tmp/grapple-cli-import-media-export\\.mp4")
add_test(
  NAME grapple_cli_package_export
  COMMAND bash -c "rm -rf /tmp/grapple-cli-package-export-package && rm -f /tmp/grapple-cli-package-export.mp4 && \"$1\" --save-package /tmp/grapple-cli-package-export-package >/dev/null && \"$1\" --open-package /tmp/grapple-cli-package-export-package --export /tmp/grapple-cli-package-export.mp4" bash $<TARGET_FILE:grapple_cli>
)
set_tests_properties(grapple_cli_package_export PROPERTIES PASS_REGULAR_EXPRESSION "output=/tmp/grapple-cli-package-export\\.mp4")
add_test(NAME grapple_cli_save_package COMMAND grapple_cli --save-package /tmp/grapple-cli-save-package)
add_test(NAME grapple_cli_open_package_smoke COMMAND grapple_cli --open-package-smoke /tmp/grapple-cli-open-package)
add_test(NAME grapple_desktop_smoke COMMAND grapple_desktop --smoke)
set_tests_properties(grapple_desktop_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_version COMMAND grapple_desktop --version)
set_tests_properties(grapple_desktop_version PROPERTIES PASS_REGULAR_EXPRESSION "Grapple 0\\.1\\.0")
add_test(NAME grapple_desktop_help COMMAND grapple_desktop --help)
set_tests_properties(grapple_desktop_help PROPERTIES PASS_REGULAR_EXPRESSION "grapple --open-package <dir>")
add_test(NAME grapple_desktop_mutate_smoke COMMAND grapple_desktop --mutate-smoke)
set_tests_properties(grapple_desktop_mutate_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_seek_smoke COMMAND grapple_desktop --seek-smoke)
set_tests_properties(grapple_desktop_seek_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_timeline_seek_smoke COMMAND grapple_desktop --timeline-seek-smoke)
set_tests_properties(grapple_desktop_timeline_seek_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_select_smoke COMMAND grapple_desktop --select-smoke)
set_tests_properties(grapple_desktop_select_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_select_audio_clip_smoke COMMAND grapple_desktop --select-audio-clip-smoke)
set_tests_properties(grapple_desktop_select_audio_clip_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_select_audio_track_smoke COMMAND grapple_desktop --select-audio-track-smoke)
set_tests_properties(grapple_desktop_select_audio_track_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_select_camera_smoke COMMAND grapple_desktop --select-camera-smoke)
set_tests_properties(grapple_desktop_select_camera_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_select_second_camera_smoke COMMAND grapple_desktop --select-second-camera-smoke)
set_tests_properties(grapple_desktop_select_second_camera_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_smoke COMMAND grapple_desktop --steward-smoke)
set_tests_properties(grapple_desktop_steward_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_import_smoke COMMAND grapple_desktop --import-smoke)
set_tests_properties(grapple_desktop_import_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_import_media_types_smoke COMMAND grapple_desktop --import-media-types-smoke)
set_tests_properties(grapple_desktop_import_media_types_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_add_video_smoke COMMAND grapple_desktop --add-video-smoke)
set_tests_properties(grapple_desktop_add_video_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_empty_add_video_smoke COMMAND grapple_desktop --empty-add-video-smoke)
set_tests_properties(grapple_desktop_empty_add_video_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_empty_add_video_undo_smoke COMMAND grapple_desktop --empty-add-video-undo-smoke)
set_tests_properties(grapple_desktop_empty_add_video_undo_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_empty_add_text_smoke COMMAND grapple_desktop --empty-add-text-smoke)
set_tests_properties(grapple_desktop_empty_add_text_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_empty_add_track_smoke COMMAND grapple_desktop --empty-add-track-smoke)
set_tests_properties(grapple_desktop_empty_add_track_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_empty_add_camera_smoke COMMAND grapple_desktop --empty-add-camera-smoke)
set_tests_properties(grapple_desktop_empty_add_camera_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_update_camera_smoke COMMAND grapple_desktop --update-camera-smoke)
set_tests_properties(grapple_desktop_update_camera_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_add_note_smoke COMMAND grapple_desktop --add-note-smoke)
set_tests_properties(grapple_desktop_add_note_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_update_note_smoke COMMAND grapple_desktop --update-note-smoke)
set_tests_properties(grapple_desktop_update_note_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_move_clip_smoke COMMAND grapple_desktop --move-clip-smoke)
set_tests_properties(grapple_desktop_move_clip_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_trim_clip_smoke COMMAND grapple_desktop --trim-clip-smoke)
set_tests_properties(grapple_desktop_trim_clip_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_clip_timing_panel_smoke COMMAND grapple_desktop --clip-timing-panel-smoke)
set_tests_properties(grapple_desktop_clip_timing_panel_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_nudge_clip_smoke COMMAND grapple_desktop --nudge-clip-smoke)
set_tests_properties(grapple_desktop_nudge_clip_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_undo_redo_smoke COMMAND grapple_desktop --undo-redo-smoke)
set_tests_properties(grapple_desktop_undo_redo_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_add_effect_smoke COMMAND grapple_desktop --add-effect-smoke)
set_tests_properties(grapple_desktop_add_effect_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_clip_effect_controls_smoke COMMAND grapple_desktop --clip-effect-controls-smoke)
set_tests_properties(grapple_desktop_clip_effect_controls_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_submit_shortcut_smoke COMMAND grapple_desktop --steward-submit-shortcut-smoke)
set_tests_properties(grapple_desktop_steward_submit_shortcut_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_text_clip_smoke COMMAND grapple_desktop --steward-text-clip-smoke)
set_tests_properties(grapple_desktop_steward_text_clip_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_note_smoke COMMAND grapple_desktop --steward-note-smoke)
set_tests_properties(grapple_desktop_steward_note_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_suggestion_smoke COMMAND grapple_desktop --steward-suggestion-smoke)
set_tests_properties(grapple_desktop_steward_suggestion_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_set_effect_param_smoke COMMAND grapple_desktop --set-effect-param-smoke)
set_tests_properties(grapple_desktop_set_effect_param_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_effect_keyframe_smoke COMMAND grapple_desktop --effect-keyframe-smoke)
set_tests_properties(grapple_desktop_effect_keyframe_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_motion_smoke COMMAND grapple_desktop --steward-motion-smoke)
set_tests_properties(grapple_desktop_steward_motion_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_zoom_motion_smoke COMMAND grapple_desktop --steward-zoom-motion-smoke)
set_tests_properties(grapple_desktop_steward_zoom_motion_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_clip_transform_smoke COMMAND grapple_desktop --steward-clip-transform-smoke)
set_tests_properties(grapple_desktop_steward_clip_transform_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_undo_smoke COMMAND grapple_desktop --steward-undo-smoke)
set_tests_properties(grapple_desktop_steward_undo_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_update_camera_smoke COMMAND grapple_desktop --steward-update-camera-smoke)
set_tests_properties(grapple_desktop_steward_update_camera_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_create_track_smoke COMMAND grapple_desktop --steward-create-track-smoke)
set_tests_properties(grapple_desktop_steward_create_track_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_delete_track_smoke COMMAND grapple_desktop --steward-delete-track-smoke)
set_tests_properties(grapple_desktop_steward_delete_track_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_delete_clip_smoke COMMAND grapple_desktop --steward-delete-clip-smoke)
set_tests_properties(grapple_desktop_steward_delete_clip_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_steward_delete_camera_controls_smoke COMMAND grapple_desktop --steward-delete-camera-controls-smoke)
set_tests_properties(grapple_desktop_steward_delete_camera_controls_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_delete_effect_smoke COMMAND grapple_desktop --delete-effect-smoke)
set_tests_properties(grapple_desktop_delete_effect_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_delete_smoke COMMAND grapple_desktop --delete-smoke)
set_tests_properties(grapple_desktop_delete_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_delete_track_smoke COMMAND grapple_desktop --delete-track-smoke)
set_tests_properties(grapple_desktop_delete_track_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_playback_smoke COMMAND grapple_desktop --playback-smoke)
set_tests_properties(grapple_desktop_playback_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_open_package_smoke COMMAND grapple_desktop --open-package-smoke)
set_tests_properties(grapple_desktop_open_package_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_edit_save_smoke COMMAND grapple_desktop --edit-save-smoke)
set_tests_properties(grapple_desktop_edit_save_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_new_package_smoke COMMAND grapple_desktop --new-package-smoke)
set_tests_properties(grapple_desktop_new_package_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(
  NAME grapple_desktop_startup_new_package_smoke
  COMMAND bash -c "rm -rf /tmp/grapple-desktop-startup-new-package && \"$1\" --new-package /tmp/grapple-desktop-startup-new-package --empty-launch-smoke" bash $<TARGET_FILE:grapple_desktop>
)
set_tests_properties(grapple_desktop_startup_new_package_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(
  NAME grapple_desktop_startup_open_package_smoke
  COMMAND bash -c "rm -rf /tmp/grapple-desktop-startup-open-package && \"$1\" --new-package /tmp/grapple-desktop-startup-open-package --empty-launch-smoke && \"$1\" --open-package /tmp/grapple-desktop-startup-open-package --empty-launch-smoke" bash $<TARGET_FILE:grapple_desktop>
)
set_tests_properties(grapple_desktop_startup_open_package_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(
  NAME grapple_desktop_launch_import_media_smoke
  COMMAND grapple_desktop --import-media /tmp/grapple-native-demo/starter-gradient.avi --launch-import-media-smoke
)
set_tests_properties(grapple_desktop_launch_import_media_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_export_settings_smoke COMMAND grapple_desktop --export-settings-smoke)
set_tests_properties(grapple_desktop_export_settings_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_product_loop_smoke COMMAND grapple_desktop --product-loop-smoke)
set_tests_properties(grapple_desktop_product_loop_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_empty_launch_smoke COMMAND grapple_desktop --empty-launch-smoke)
set_tests_properties(grapple_desktop_empty_launch_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_sample_start_smoke COMMAND grapple_desktop --sample-start-smoke)
set_tests_properties(grapple_desktop_sample_start_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_empty_save_smoke COMMAND grapple_desktop --empty-save-smoke)
set_tests_properties(grapple_desktop_empty_save_smoke PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_screenshot COMMAND grapple_desktop --screenshot /tmp/grapple-desktop-ctest.png)
set_tests_properties(grapple_desktop_screenshot PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
add_test(NAME grapple_desktop_effect_screenshot COMMAND grapple_desktop --effect-screenshot /tmp/grapple-desktop-effect-ctest.png)
set_tests_properties(grapple_desktop_effect_screenshot PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
